SplashScreen e fake token
Foi iniciado o navigation drawer e foram adicionados seus recursos

Signed-off-by: lucasx95 <andlaax95@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,8 @@
     <string name="enter">Entrar</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="nav_drawer_account_icon">Minha conta</string>
+    <string name="nav_drawer_accounts_icon">Gerenciar usuários</string>
+    <string name="nav_drawer_logout_icon">Encerrar sessão</string>
 
 </resources>
