Adicionando final NavDrawer
O Nav drawer foif inalizado faltando somente a imagem de fundo do header
que nao tinha o resouce.
Todos fragments foram criados e so precisam ser preenchidos.

Signed-off-by: lucasx95 <andlaax95@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="nav_drawer_account_icon">Minha conta</string>
     <string name="nav_drawer_accounts_icon">Gerenciar usuários</string>
     <string name="nav_drawer_logout_icon">Encerrar sessão</string>
+    <string name="nav_drawer_home_icon">Início</string>
 
 </resources>
